--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=7.1.0",
         "laravel/framework": ">=5.6.0"
     },
-    "license": "Apache",
+    "license": "MIT",
     "authors": [
         {
             "name": "wangyaoguang",
