--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "homepage": "https://github.com/Yyyyyoly/walle-sdk",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": ">=5.6.0"
+        "laravel/framework": ">=5.6.0",
+        "guzzlehttp/guzzle": "^7.1",
+        "ext-json": "*"
     },
     "license": "MIT",
     "authors": [
