--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "require": {
         "php": ">=7.1.0",
         "laravel/framework": ">=5.6.0",
-        "guzzlehttp/guzzle": "^7.1",
-        "ext-json": "*"
+        "guzzlehttp/guzzle": "^7.1"
     },
     "license": "MIT",
     "authors": [
