--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "myhayo/walle-sdk",
     "description": "php sdk of walle-server",
     "type": "library",
-    "homepage": "https://github.com/Yyyyyoly/walle-sdk",
+    "homepage": "https://github.com/myhayo/walle-sdk",
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.0",
         "laravel/framework": ">=5.6.0",
         "guzzlehttp/guzzle": "^7.1"
     },
