--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "homepage": "https://github.com/myhayo/walle-sdk",
     "require": {
-        "php": ">=7.0",
-        "laravel/framework": ">=5.6.0",
+        "php": "^7.1",
+        "laravel/framework": "^5.6",
         "guzzlehttp/guzzle": "^7.1"
     },
     "license": "MIT",
