--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "library",
     "homepage": "https://github.com/myhayo/walle-sdk",
     "require": {
-        "php": "^7.1",
+        "php": ">=7.0.0",
         "laravel/framework": "^5.6",
-        "guzzlehttp/guzzle": "^7.1"
+        "guzzlehttp/guzzle": ">=6.5.5"
     },
     "license": "MIT",
     "authors": [
