--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "homepage": "https://github.com/myhayo/walle-sdk",
     "require": {
         "php": ">=7.0.0",
-        "laravel/framework": "^5.6",
-        "guzzlehttp/guzzle": ">=6.5.5"
+        "laravel/framework": "~5.5",
+        "guzzlehttp/guzzle": "^6.4"
     },
     "license": "MIT",
     "authors": [
